--- a/index.html
+++ b/index.html
@@ -2,22 +2,74 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- favicon  -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Green Haven" />
     <link rel="manifest" href="/site.webmanifest" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <!-- <meta
       name="keywords"
       content="
       house plants, indoor plants, low-maintenance houseplants, tropical plants, air-purifying plants, plant care tips, pothos care, monstera care, lipstick plant care, plants collection, air purifying plants, houseplants, evergreen plants, pothos, monstera, infoor garden, lipstick plants, indoor gardening, plant varieties, low maintenance plants, 
       plant care, plant tips, green haven, pothos, monstera, lipstick plant, air purifying plants, plant care advice, indoor plant care, plant maintenance, houseplant care, greenery, plant inspiration, low maintenance houseplants, plant advice"
+    /> -->
+
+    <!-- Primary Meta Tags -->
+    <title>Green Haven - Indoor Plants for Health & Wellbeing</title>
+    <meta
+      name="title"
+      content="Green Haven - Indoor Plants for Health & Wellbeing"
     />
-    <meta name="author" content="Shawn K" />
+    <meta
+      name="description"
+      content="Discover the benefits of indoor plants and learn how to care for them. Green Haven educates you about bringing nature indoors for healthier living and environmental awareness."
+    />
+    <meta
+      name="keywords"
+      content="indoor plants, house plants, plant tips, greenery, plant advice, evergreens, air purifying, eco living, sustainability living, living greens, plant benefits, houseplants, nature awareness, green living, indoor environment, plant care, environmental awareness, healthy living"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://greenshaven.netlify.app/" />
+    <meta
+      property="og:title"
+      content="Green Haven - Indoor Plants for Health & Wellbeing"
+    />
+    <meta
+      property="og:description"
+      content="Discover the benefits of indoor plants and learn how to care for them. Green Haven educates you about bringing nature indoors for healthier living."
+    />
+    <meta
+      property="og:image"
+      content="https://greenshaven.netlify.app/images/og-image.jpg"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://greenshaven.netlify.app/" />
+    <meta
+      property="og:title"
+      content="Green Haven - Indoor Plants for Health & Wellbeing"
+    />
+    <meta
+      property="og:description"
+      content="Discover the benefits of indoor plants and learn how to care for them. Green Haven educates you about bringing nature indoors for healthier living."
+    />
+    <meta
+      property="og:image"
+      content="https://greenshaven.netlify.app/images/og-image.jpg"
+    />
+
+    <!-- Additional Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Green Haven | Air-Purifying Plants & Eco-Friendly Living</title>
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+     <meta name="author" content="Shawn K" />
+   
   </head>
   <body>
     <div id="root"></div>
